fix(tabs): Remove active color state on mobile and change default color (#4008)

--- a/packages/design-system/ui/components/tabs/mobile-stack/_index.scss
+++ b/packages/design-system/ui/components/tabs/mobile-stack/_index.scss
@@ -66,6 +66,13 @@
   &:last-child {
     border-bottom: $border-width-thin solid $color-border;
   }
+
+  @include touch-device {
+
+    .slds-button:active {
+      color: currentColor;
+    }
+  }
 }
 
 /**
