fix(cards): Make header title always bold for touch (#4011)

--- a/packages/design-system/ui/components/cards/base/_index.scss
+++ b/packages/design-system/ui/components/cards/base/_index.scss
@@ -63,6 +63,7 @@
 
   @include touch-device {
     font-size: $var-font-size-6;
+    font-weight: $card-font-weight; // Ensures title is bold when there is no nested link
   }
 }
 
