feat(sanitize): Create sanitization script, parse and optimize v2 (#4031)
* Create sanitization script, parse and optimize v2

* Add @lwc annotations

* Replace gulp-minify-css with gulp-clean-css

* Remove stylestats and replace with working script

* Release notes

* Make sure sanitization runs on build

* Move exports

--- a/packages/design-system/ui/components/accordion/_doc.scss
+++ b/packages/design-system/ui/components/accordion/_doc.scss
@@ -10,4 +10,5 @@
  * @type expandable-panel
  * @layout responsive
  * @synonyms expando collapso, expandable sections, toggle visibility
+ * @lwc
  */
