--- a/packages/design-system/ui/components/button-icons/base/_index.scss
+++ b/packages/design-system/ui/components/button-icons/base/_index.scss
@@ -101,7 +101,7 @@
  * @restrict .slds-button_icon
  */
 .slds-button_icon-brand {
-  @include button-brand;
+  @include button-icon-brand;
 
   &[disabled],
   &:disabled {
