--- a/packages/design-system/ui/components/buttons/stateful/_index.scss
+++ b/packages/design-system/ui/components/buttons/stateful/_index.scss
@@ -10,6 +10,7 @@
  * @restrict button
  * @support dev-ready
  * @variant
+ * @lwc
  */
 .slds-button_neutral.slds-is-selected,
 .slds-button--neutral.slds-is-selected {
