--- a/packages/design-system/ui/components/checkbox/form-element/_index.scss
+++ b/packages/design-system/ui/components/checkbox/form-element/_index.scss
@@ -8,6 +8,7 @@
  * @restrict .slds-checkbox
  * @support dev-ready
  * @variant
+ * @lwc
  */
 .slds-checkbox_standalone {
   pointer-events: none; // Allows pointer-event to pass through to input
