--- a/packages/design-system/ui/components/form-element/stacked/_index.scss
+++ b/packages/design-system/ui/components/form-element/stacked/_index.scss
@@ -8,6 +8,7 @@
  * @restrict .slds-form-element
  * @support dev-ready
  * @variant
+ * @lwc
  */
 .slds-form-element_stacked,
 .slds-form_stacked .slds-form-element,
