fix(mobile): Change touch feature mixin to be scoped to class instead (#4041)

--- a/packages/design-system/ui/dependencies/_layout.scss
+++ b/packages/design-system/ui/dependencies/_layout.scss
@@ -55,6 +55,14 @@
 
 // Touch-enabled devices without hover
 @mixin touch-device {
+
+  .slds-is-mobile & {
+    @content;
+  }
+}
+
+// Touch-enabled devices without hover
+@mixin has-touch {
   @media (pointer: coarse) and (hover: none) {
     @content;
   }
