--- a/packages/design-system/ui/dependencies/_root.scss
+++ b/packages/design-system/ui/dependencies/_root.scss
@@ -18,7 +18,7 @@
     font-size: $font-size-3;
     background: transparent;
 
-    @include touch-device {
+    @include has-touch {
       font-size: $font-size-5;
     }
   }
