fix(tabs): update hover state for mobile tabs

--- a/packages/design-system/ui/components/tabs/mobile-stack/_index.scss
+++ b/packages/design-system/ui/components/tabs/mobile-stack/_index.scss
@@ -70,7 +70,8 @@
 
   @include touch-device {
 
-    .slds-button:active {
+    .slds-button:active,
+    .slds-button:hover { // :hover is triggered by mobile on single tap or press and drag, doesn't go away unless user taps away
       color: currentColor;
     }
   }
