feat(santized): Add ability to generate a file using @import (#4085)
* chore(sanitized): Move matchesMarkupAndStyle test to matchesMarkup

* Update legacy path

* chore(sanitized): Remove mixins from dist

* feat(chunky-sanitized): mixin files should not generate output files

* Moved font declarations out of init, added formatting to ensure proper parsing

--- a/packages/design-system/ui/index-sanitized.scss
+++ b/packages/design-system/ui/index-sanitized.scss
@@ -5,13 +5,14 @@
 $deprecate-mode: 'silent';
 
 @import 'init';
+@import 'core/font';
 
 // Resets
 @import 'vendor/normalize-sanitized';
 @include core($scoped: false, $globals: false);
 
 // Framework
-@import 'components/index-sanitized';
+@import 'components/index.sanitized';
 @import 'utilities/index';
 
 // Print
