--- a/packages/design-system/ui/components/button-icons/stateful/_index.scss
+++ b/packages/design-system/ui/components/button-icons/stateful/_index.scss
@@ -1,6 +1,8 @@
 // Copyright (c) 2015-present, salesforce.com, inc. All rights reserved
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
+@import '../mixins/index';
+
 /**
  * The stateful button requires the `.slds-button--icon-border` class in addition to the `.slds-button` class.
  *
