--- a/packages/design-system/ui/components/cards/base/_index.scss
+++ b/packages/design-system/ui/components/cards/base/_index.scss
@@ -52,6 +52,7 @@
  * @restrict .slds-card__header h2
  */
 .slds-card__header-title {
+  display: flex;
   font-size: $var-font-size-5;
   line-height: $line-height-heading;
 }
