--- a/packages/design-system/ui/components/lookups/base/_deprecate.scss
+++ b/packages/design-system/ui/components/lookups/base/_deprecate.scss
@@ -140,7 +140,7 @@
      * Search input inside of lookup
      *
      * @selector .slds-lookup__search-input
-     * @restrict .slds-lookup input
+     * @restrict .slds-lookup input, .slds-picklist input
      */
     &__search-input {
       width: 100%;
