Revert "fix(docs): Update Unescaped Entities, Typos, Code Examples in Docs (#4149)" (#4161)
This reverts commit 991742040e734c9f748a80d119e485545c258ee7.

--- a/packages/design-system/ui/components/lookups/base/_deprecate.scss
+++ b/packages/design-system/ui/components/lookups/base/_deprecate.scss
@@ -140,7 +140,7 @@
      * Search input inside of lookup
      *
      * @selector .slds-lookup__search-input
-     * @restrict .slds-lookup input, .slds-picklist input
+     * @restrict .slds-lookup input
      */
     &__search-input {
       width: 100%;
