feat(docs): Mobile/touch examples (#4154)
* chore(infra): Add Webpack loaders & update packages
* chore(infra): Add SLDSFrame React component
* chore(infra): Add common docs text React component
* chore(infra): Only load styles where needed
* chore(infra): Add demo version of touch styles (without media query)
* chore(docs): Add mobile/touch example to Buttons docs
* chore(docs): Webpack config tweak
* chore(docs): Streamline CSS in webpack & Storybook
* chore(infra): Add touch-demo to build & dist process
* chore(infra): Tweak `border-box-line-height` mixin
* chore(touch): Move `touch-demo` to `__internal`
* chore(misc): Add parentheses to equations
* chore(docs): Tweak mobile frame component
* chore(docs): Tweak `select` to accept change handler
* chore(docs): Tweak mobile/touch text
* chore(infra): Tweak `CodeView` to function with mobile/touch frame
* chore(path): Remove `card`
* chore(path): Add mobile example to docs
* chore(button): Add mobile example to docs
* chore(docs): Mobile/touch tweaks from feedback
* chore(docs): Tweak Webpack config to properly load fonts
* fix(infra): Lint fix in SLDSFrame
* chore(infra): Remove obsolete file reference
* chore(docs): Fix asset location

--- a/packages/design-system/ui/dependencies/_layout.scss
+++ b/packages/design-system/ui/dependencies/_layout.scss
@@ -122,7 +122,12 @@
   @if comparable($border, $padding) {
     $box-model: rem($border + $padding);
   } @else {
-    $box-model: rem($border) + $padding;
+    $box-model: (rem($border) + $padding);
   }
-  line-height: calc(#{$value} - #{$box-model});
+
+  @if comparable($value, $box-model) {
+    line-height: ($value - $box-model);
+  } @else {
+    line-height: (rem($value) - $box-model);
+  }
 }
