--- a/packages/design-system/shared/styles/doc.scss
+++ b/packages/design-system/shared/styles/doc.scss
@@ -17,9 +17,29 @@ $light-gray-border-color: #f2f2f2;
   transform: translate3d(0, 0, 0);
 }
 
-.docs-mobile_iframe {
-  border: none;
+.docs-mobile_iframe,
+.docs-mobile_frame {
+  border: solid 2px $light-gray-border-color;
   width: 100%;
+  background-color: #d2d2cf1f;
+}
+
+.docs-mobile_iframe {
+  border: solid 3px $light-gray-border-color;
+}
+
+$frame-spacing: 0.5rem;
+
+.docs-mobile_frame {
+  display: block;
+  margin: $frame-spacing auto;
+  width: calc(100% - #{2 * $frame-spacing});
+  background-color: #fff;
+}
+
+
+.docs-device-select {
+  margin-bottom: 1rem;
 }
 
 .docs-mobile_iframe + .demo-content {
@@ -93,6 +113,39 @@ $light-gray-border-color: #f2f2f2;
 
 .doc-toggle-code__button {
   font-weight: 700;
+}
+
+.docs-codeblock_frame {
+  border: 3px solid $light-gray-border-color;
+  background-color: #d2d2cf1f;
+}
+
+.docs-codeblock__device-selector {
+  border-top: 1px solid $light-gray-border-color;
+  border-bottom: 0;
+}
+
+.docs-codeblock__device-selector li {
+  padding: 0 0.5rem;
+
+  .slds-form-element {
+    align-items: center;
+    display: flex;
+    margin-bottom: 0;
+
+    .slds-form-element__label {
+      flex: 1 1 auto;
+      float: none;
+      max-width: none;
+      padding: 0;
+    }
+
+    .slds-form-element__control {
+      flex: 1 1 auto;
+      padding-left: 5%;
+    }
+
+  }
 }
 
 // Type Styles
