fix(accordion): Fix long section heading truncation (#4199)

--- a/packages/design-system/ui/components/accordion/base/_index.scss
+++ b/packages/design-system/ui/components/accordion/base/_index.scss
@@ -44,6 +44,7 @@
 .slds-accordion__summary-heading {
   display: flex;
   flex-grow: 1;
+  min-width: 0;
   font-size: $var-font-size-5;
   line-height: $line-height-heading;
 
