--- a/packages/design-system/ui/components/datepickers/base/_index.scss
+++ b/packages/design-system/ui/components/datepickers/base/_index.scss
@@ -1,6 +1,8 @@
 // Copyright (c) 2015-present, salesforce.com, inc. All rights reserved
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
+@import 'deprecate';
+
 /**
  * @summary Initiates a datepicker component
  *
@@ -128,9 +130,9 @@
 /**
  * @summary Indicates days that are in previous/next months
  *
- * @selector .slds-disabled-text
- * @restrict .slds-datepicker td
+ * @selector .slds-day_adjacent-month
+ * @restrict .slds-datepicker__month td
  */
-.slds-disabled-text {
-  color: $color-text-button-default-disabled;
+.slds-day_adjacent-month {
+  color: $datepicker-color-text-day-adjacent-month;
 }
